syntax = "proto3";
package provenance.flatfees.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "provenance/flatfees/v1/flatfees.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package          = "github.com/provenance-io/provenance/x/flatfees/types";
option java_package        = "io.provenance.flatfees.v1";
option java_multiple_files = true;

// Query defines the gRPC querier service for marker module.
service Query {
  // Params queries the parameters for x/flatfees.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/provenance/flatfees/v1/params";
  }

  // AllMsgFees returns info on all msg types that have a customized msg fee.
  rpc AllMsgFees(QueryAllMsgFeesRequest) returns (QueryAllMsgFeesResponse) {
    option (google.api.http).get = "/provenance/flatfees/v1/msgfee/all";
  }

  // MsgFee will return information about what it will cost to execute a given msg type.
  // If the provided msg type does not have a specific fee defined, the default is returned.
  rpc MsgFee(QueryMsgFeeRequest) returns (QueryMsgFeeResponse) {
    option (google.api.http).get = "/provenance/flatfees/v1/msgfee";
  }
}

// QueryParamsRequest is the request type for the Params query.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Params query.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryAllMsgFeesRequest is the request type for the AllMsgFees query.
message QueryAllMsgFeesRequest {
  // do_not_convert will return the fees as defined (instead of as converted).
  bool do_not_convert = 1;
  // pagination defines optional pagination parameters for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 99;
}

// QueryAllMsgFeesResponse is the response type for the AllMsgFees query.
message QueryAllMsgFeesResponse {
  // msg_fees contains the requested information.
  repeated MsgFee msg_fees = 1;
  // pagination defines the pagination parameters of the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 99;
}

// QueryMsgFeeRequest is the request type for the MsgFee query.
message QueryMsgFeeRequest {
  // msg_type_url is the is the type-url of the message, e.g. "/cosmos.bank.v1beta1.MsgSend".
  string msg_type_url = 1;
  // do_not_convert will return the fees as defined (instead of as converted).
  bool do_not_convert = 2;
}

// QueryMsgFeeResponse is the response type for the MsgFee query.
message QueryMsgFeeResponse {
  // msg_fee is the requested entry.
  MsgFee msg_fee = 1;
}